[package]
name = "cargo-ngrok"
version = "0.1.0"
authors = ["David Laban <alsuren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
reqwest = { version = "0.10", features = ["json"] }
structopt = "*"
tokio = {version = "0.2", features = ["full"] }
serde_json = "1.0.48"
serde = { version = "1.0", features = ["derive"] }
