[package]
name = "cargo-ngrok"
version = "0.1.0"
authors = ["David Laban <alsuren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
reqwest = { version = "0.10", features = ["json"] }
structopt = "*"
tokio = {version = "0.2", features = ["full"] }
serde_json = "1.0.48"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.11.0"
lazy_static = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
regex = "1.0"
syn = { version = "1.0", features = ["parsing", "printing", "full", "visit"], default-features = false }
